@@ -1,3 +1,8 @@
+2025-12-12  Dirk Eddelbuettel  <edd@debian.org>
+
+	* inst/tinytest/test_system.R: Wrap suppressMessages() around three
+	tests for long-obsolete linker and compiler flags
+
 2025-12-06  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Roll micro version and date
